feat: ArticleCards: added animation on group hover + VButton: ref

--- a/src/assets/scss/global.scss
+++ b/src/assets/scss/global.scss
@@ -148,3 +148,7 @@ body {
 .topic-description {
   @apply tw-text-gray-2 tw-font-medium tw-leading-7;
 }
+
+.anim-500 {
+  @apply tw-transition-all tw-ease-in-out tw-duration-500
+}
