feat: added Article page

--- a/src/assets/scss/global.scss
+++ b/src/assets/scss/global.scss
@@ -96,12 +96,17 @@ body {
 .min-w-200px {
   min-width: 200px;
 }
+
+.min-h-400px {
+  min-height: 400px;
+}
 .max-w-200px {
   max-width: 200px;
 }
 .max-w-400px {
   max-width: 400px;
 }
+
 .w-444px {
   width: 444px;
 }
