feat/wip: MainPage: Added Sliders

--- a/src/assets/scss/global.scss
+++ b/src/assets/scss/global.scss
@@ -242,3 +242,6 @@ body {
 .dynamic-info-card {
   @apply tw-rounded-4xl tw-h-74 tw-m-1 tw-mb-7;
 }
+.article-card-swiper {
+  @apply tw-rounded-4xl  tw-m-1 tw-mb-7;
+}
