--- a/src/assets/scss/global.scss
+++ b/src/assets/scss/global.scss
@@ -98,6 +98,20 @@ body {
   // background: #f9f9fc;
   // background-color: #f6f7f9;
 }
+$max-layout-width: 1440px;
+.max-w-layout {
+  max-width: $max-layout-width;
+}
+.max-layout-width {
+  max-width: $max-layout-width;
+  @apply tw-overflow-hidden tw-mx-auto tw-w-full;
+}
+.max-layout-width-overflow-auto {
+  max-width: $max-layout-width;
+  @apply tw-mx-auto;
+}
+
+
 
 @mixin transition-mixin {
   transition: 1s;
