--- a/src/assets/scss/global.scss
+++ b/src/assets/scss/global.scss
@@ -63,6 +63,7 @@ html {
   -webkit-text-size-adjust: 100%;
   -webkit-tap-highlight-color: rgba(20, 20, 31, 0);
   // overflow: hidden !important;
+  scroll-behavior: smooth;
   &::backdrop {
     background-color: #448;
   }
@@ -370,3 +371,5 @@ $max-layout-width: 1440px;
   // 14px - 16px - 16px
   @apply tw-font-medium tw-leading-7 tw-text-sm lg:tw-text-base;
 }
+
+
